# deskmate

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md
.github/actions/deskmate-arduino/lint/: lint.sh
.github/actions/deskmate-sdl2/lint/: lint.sh
.github/actions/deskmate/lint/: Dockerfile  action.yml  build.sh  lint.sh
.github/workflows/: deskmate-arduino.yml  deskmate-sdl2.yml  deskmate.yml
case/stl/: base1.stl  base1_0.3mm_PETG_MINI_58m.gcode  left.stl  left_0.3mm_PETG_MINI_12m.gcode  right.stl  right_0.3mm_PETG_MINI_12m.gcode  switch1.stl  switch1_0.3mm_PETG_MINI_4m.gcode
code/arduino/: .gitignore  README.md  platformio.ini
code/arduino/lib/deskmate/arduino/gfx/: sharp_mem_display.cc  sharp_mem_display.h
code/arduino/lib/deskmate/arduino/input/: buttons.cc  buttons.h  crank.cc
code/arduino/lib/deskmate/arduino/net/: mqtt.cc  mqtt.h  wifi.cc  wifi.h
code/arduino/src/: credentials_example.h  main.cpp
code/lib/deskmate/: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Makefile
code/lib/deskmate/gfx/: screen.h
code/lib/deskmate/gfx/components/: text_list_item.h
code/lib/deskmate/gfx/screens/: list.h  window.cc  window.h
code/lib/deskmate/input/: input.h
code/lib/deskmate/src/deskmate/app/: app.cc  app.h  config.h
code/lib/deskmate/src/deskmate/gfx/: constants.h  display.cc  display.h
code/lib/deskmate/src/deskmate/gfx/components/: circle_horizontal_list_item.cc  circle_horizontal_list_item.h  mqtt_circle_horizontal_list_item.cc  mqtt_circle_horizontal_list_item.h  mqtt_list_item.cc  mqtt_list_item.h  mqtt_vertical_bar_horizontal_list_item.cc  mqtt_vertical_bar_horizontal_list_item.h  mqtt_vertical_bar_list_item.cc  mqtt_vertical_bar_list_item.h  text_list_item.h  vertical_bar_horizontal_list_item.cc  vertical_bar_horizontal_list_item.h
code/lib/deskmate/src/deskmate/gfx/screens/: horizontal_list.cc  horizontal_list.h  list.cc  list.h  vertical_bars_list.cc  vertical_bars_list.h  window.cc  window.h
code/lib/deskmate/src/deskmate/mqtt/: mqtt.cc  mqtt.h
code/lib/deskmate/src/deskmate/utils/: utils.h
code/sdl2/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.ubuntu  README.md
code/sdl2/assets/fonts/DejaVu/: README.md
code/sdl2/cmake/: FindSDL2.cmake  README.md
code/sdl2/lib/deskmate/sdl2/gfx/: display.cc  display.h
code/sdl2/lib/deskmate/sdl2/input/: input_transcriber.h
code/sdl2/lib/deskmate/sdl2/net/: mqtt.cc  mqtt.h
code/sdl2/src/: credentials_example.h  main.cc
code/sdl2/src/samples/: horizontal_list.cc  simple_list.cc  vertical_bars_list.cc
uc/arduino/display/sharpmemtest/: sharpmemtest.ino
uc/arduino/rotary_encoder/rotary_encoder/: rotary_encoder.ino
uc/platformio/deskmate/: .gitignore  CMakeLists.txt  README.md  log  platformio.ini
uc/platformio/deskmate/lib/deskmate/arduino/gfx/: sharp_mem_display.cc  sharp_mem_display.h
uc/platformio/deskmate/lib/deskmate/arduino/input/: buttons.cc  buttons.h  crank.cc  crank.h
uc/platformio/deskmate/lib/deskmate/arduino/net/: mqtt.cc  mqtt.h  wifi.cc
uc/platformio/deskmate/lib/deskmate/gfx/: display.cc  display.h  screen.h
uc/platformio/deskmate/lib/deskmate/gfx/components/: mqtt_list_item.h  text_list_item.h
uc/platformio/deskmate/lib/deskmate/gfx/screens/: list.cc  list.h  window.cc  window.h
uc/platformio/deskmate/lib/deskmate/input/: buttons.h  input.h
uc/platformio/deskmate/lib/deskmate/sdl2/gfx/: display.cc  display.h
uc/platformio/deskmate/lib/deskmate/sdl2/input/: input_transcriber.cc
uc/platformio/deskmate/lib/deskmate/sdl2/net/: mqtt.h
uc/platformio/deskmate/src/: credentials_example.h  credentials_sdl2_example.h  main.cpp  main_sdl2.cc
